# aula09_bootcamp_python

./: README.md  elt.py  exemplo00.py  exemplo_sentry.py  logging_exemplo_erros.py  pipeline.py  pyproject.toml  utils_log.py
